fix: add nowrap to design logo

--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -167,7 +167,7 @@ a:active {
 
 #designedHeader {
     display: flex;
-
+    white-space: nowrap;
     align-items: center;
     justify-content: flex-end;
     font-style: normal;
